wk_taa_taaqa/src/objects/Policy_Acknowledgement__c.object
<CustomObject>
    <fields>
        <fullName>Date_Signed__c</fullName>
        <label>Date Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Statement__c</fullName>
        <label>Legal Statement</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Policy_Document__c</fullName>
        <label>Policy Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Signature</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Policy Acknowledgement</label>
    <listViews>
        <fullName>My_Completed_Policies</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Policy_Document__c</columns>
        <columns>Date_Signed__c</columns>
        <columns>Signature__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Policy_Acknowledgement__c.Completed</value>
        </filters>
        <label>My Completed Policies</label>
    </listViews>
    <listViews>
        <fullName>My_Open_Policies</fullName>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Policy_Document__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Policy_Acknowledgement__c.Open</value>
        </filters>
        <label>My Open Policies</label>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Completed_Policies</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Policy_Document__c</columns>
        <columns>Signature__c</columns>
        <columns>Date_Signed__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Policy_Acknowledgement__c.Completed</value>
        </filters>
        <label>My Team&apos;s Completed Policies</label>
    </listViews>
    <listViews>
        <fullName>My_Team_s_Open_Policies</fullName>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>NAME</columns>
        <columns>Due_Date__c</columns>
        <columns>Policy_Document__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Policy_Acknowledgement__c.Open</value>
        </filters>
        <label>My Team&apos;s Open Policies</label>
    </listViews>
    <nameField>
        <label>Policy</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Policy Acknowledgement</pluralLabel>
    <recordTypes>
        <fullName>Completed</fullName>
        <active>true</active>
        <label>Completed</label>
    </recordTypes>
    <recordTypes>
        <fullName>Open</fullName>
        <active>true</active>
        <label>Open</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Date_Signed_Required</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Signature__c)),ISNULL(Date_Signed__c))</errorConditionFormula>
        <errorDisplayField>Date_Signed__c</errorDisplayField>
        <errorMessage>Please enter today&apos;s date in the Date Signed field.</errorMessage>
    </validationRules>
</CustomObject>